main Items section
main Items Updates

--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
     <img src="images/pic1.png" alt=""  class="img-responsive"/>
     <hr>
     <ul>
-     <li><button type="button" class="btn btn-default">$145.99</button></li>
+     <li><button class="button">$145.99</button></li>
      <li><h4>Even&Odd</h4></li>
    </ul>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
-    <img src="images/pic1.png" alt="" class="img-responsive"/>
+    <img src="images/pic2.png" alt="" class="img-responsive"/>
     <hr>
     <ul>
-    <li><button type="button" class="btn btn-default">$145.99</button></li>
+    <li><button class="button">$145.99</button></li>
     <li><h4>Even&Odd</h4></li>
   </ul>
     </div>
@@ -146,7 +146,7 @@
     <img src="images/pic1.png" alt="" class="img-responsive" />
     <hr>
     <ul>
-    <li><button type="button" class="btn btn-default">$145.99</button></li>
+    <li><button class="button">$145.99</button></li>
     <li><h4>Even&Odd</h4></li>
   </ul>
     </div>
@@ -162,15 +162,15 @@
     <img src="images/pic1.png" alt="" class="img-responsive" />
     <hr>
     <ul>
-    <li><button type="button" class="btn btn-default">$145.99</button></li>
+    <li><button class="button">$145.99</button></li>
     <li><h4>Even&Odd</h4></li>
   </ul>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
-    <img src="images/pic1.png" alt=""  class="img-responsive"/>
+    <img src="images/pic2.png" alt=""  class="img-responsive"/>
     <hr>
     <ul>
-    <li><button type="button" class="btn btn-default">$145.99</button></li>
+    <li><button class="button">$145.99</button></li>
     <li><h4>Even&Odd</h4></li>
   </ul>
     </div>
@@ -178,7 +178,7 @@
     <img src="images/pic1.png" alt=""  class="img-responsive"/>
     <hr>
     <ul>
-    <li><button type="button" class="btn btn-default">$145.99</button></li>
+    <li><button class="button">$145.99</button></li>
     <li><h4>Even&Odd</h4></li>
   </ul>
     </div>
