--- a/index.html
+++ b/index.html
@@ -119,9 +119,13 @@
 <section id="main-items">
 <div class="container">
 
-    <div class="col-md-12">
+    <div class="col-md-10">
       <h2>New arrivals on FooseShoes</h2>
+        </div>
+        <div class="col-md-2 top_main">
+      <a href="#">show all</a>
     </div>
+
 
   </div>
     <div class="container">
@@ -155,9 +159,13 @@
 </div>
 <div class="container">
 
-    <div class="col-md-12">
-      <h2>New arrivals on FooseShoes</h2>
-    </div>
+
+      <div class="col-md-10">
+        <h2>New arrivals on FooseShoes</h2>
+          </div>
+          <div class="col-md-2 top_main">
+        <a href="#">show all</a>
+      </div>
     <div class="col-md-4 col-sm-6 col-xs-12 item-prop ">
     <img src="images/pic1.png" alt="" class="img-responsive" />
     <hr>
