seemly it look good
new updates

--- a/index.html
+++ b/index.html
@@ -21,20 +21,14 @@
 
   <!-- Custom CSS -->
         <link href="style.css" rel="stylesheet">
-
-
 </head>
-
 <body>
 <!--TOP Nav-->
   <nav class=" top-header" role="navigation">
 		<div class="container">
-
 				<div class="col-md-9">
-
 						<div class="logo">
                 <h1>FOOSESHOSE</h1>
-
 					</div>
 				</div>
 				<div class="col-md-3 top-header-right ">
@@ -43,13 +37,8 @@
 		        <li><a href="#"><h5>LOGIN or Register</h5></a></li>
         </ul>
 				</div>
-
-
 		</div>
   </nav>
-
-
-
   <!-- BUttom Nav-->
   <nav class="navbar navbar-custom" role="navigation" id="my-nav">
     <div class="container">
@@ -58,9 +47,7 @@
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <i class="fa fa-bars"></i>
         </button>
-
       </div>
-
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -70,140 +57,118 @@
           <li><a href="#">Pages</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Contact</a></li>
-
         </ul>
-
-
-
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-
+<!--Special Items-->
   <section id="special-items">
     <div class="container" >
-
-
         <div class="col-md-4 col-sm-6 col-xs-12  post-content">
           <a href="#"><img src="images/img1.png" alt="" class="img-responsive"/></a>
           <div class="caption">
-
-
                <p>ON SALE</p>
-
            </div>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 post-content">
           <a href="#">  <img src="images/img2.png" alt="" class="img-responsive"/></a>
             <div class="caption ">
-
-
                <p>SPECIAL OFFERS</p>
-
            </div>
-
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 post-content">
           <a href="#"><img src="images/img3.png" alt="" class="img-responsive" /></a>
             <div class="caption ">
-
-
                <p>MUST HAVE</p>
-
            </div>
         </div>
-
   </div>
 </section>
+<!--End Of Special Items-->
 
-
+<!--Main Items-->
 <section id="main-items">
 <div class="container">
-
+    <div class="col-md-10 col-sm-6 col-xs-12">
+      <h2>New arrivals on FooseShoes</h2>
+        </div>
+        <div class="col-md-2 col-sm-6  col-xs-12 top_main">
+      <a href="#">show all</a>
+    </div>
+  </div>
+    <div class="container">
+    <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
+    <a href="#"><img src="images/pic1.png" alt=""  class="img-responsive"/></a>
+    <hr>
+    <ul>
+     <li><button class="button">$145.99</button></li>
+     <li> <a href="#"><h4>Even&Odd</h4></li></a>
+   </ul>
+    </div>
+    <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
+    <a href="#"><img src="images/pic2.png" alt="" class="img-responsive"/></a>
+    <hr>
+    <ul>
+    <li><button class="button">$145.99</button></li>
+    <li> <a href="#"><h4>Even&Odd</h4></li></a>
+    	<span class="price1 bg">on sale</span>
+  </ul>
+    </div>
+    <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
+    <a href="#"><img src="images/pic1.png" alt="" class="img-responsive" /></a>
+    <hr>
+    <ul>
+    <li><button class="button">$145.99</button></li>
+    <li> <a href="#"><h4>Even&Odd</h4></li></a>
+  </ul>
+    </div>
+</div>
+<div class="container">
     <div class="col-md-10">
       <h2>New arrivals on FooseShoes</h2>
         </div>
         <div class="col-md-2 top_main">
       <a href="#">show all</a>
     </div>
-
-
   </div>
-    <div class="container">
-
-    <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
-    <img src="images/pic1.png" alt=""  class="img-responsive"/>
-    <hr>
-    <ul>
-     <li><button class="button">$145.99</button></li>
-     <li><h4>Even&Odd</h4></li>
-   </ul>
-    </div>
-    <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
-    <img src="images/pic2.png" alt="" class="img-responsive"/>
-    <hr>
-    <ul>
-    <li><button class="button">$145.99</button></li>
-    <li><h4>Even&Odd</h4></li>
-  </ul>
-    </div>
-    <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
-    <img src="images/pic1.png" alt="" class="img-responsive" />
-    <hr>
-    <ul>
-    <li><button class="button">$145.99</button></li>
-    <li><h4>Even&Odd</h4></li>
-  </ul>
-    </div>
-
-
-</div>
-<div class="container">
-
-
-      <div class="col-md-10">
-        <h2>New arrivals on FooseShoes</h2>
-          </div>
-          <div class="col-md-2 top_main">
-        <a href="#">show all</a>
+  <div class="container">
+      <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
+      <a href="#"><img src="images/pic1.png" alt=""  class="img-responsive"/></a>
+      <hr>
+      <ul>
+       <li><button class="button">$145.99</button></li>
+       <li> <a href="#"><h4>Even&Odd</h4></li></a>
+     </ul>
       </div>
-    <div class="col-md-4 col-sm-6 col-xs-12 item-prop ">
-    <img src="images/pic1.png" alt="" class="img-responsive" />
-    <hr>
-    <ul>
-    <li><button class="button">$145.99</button></li>
-    <li><h4>Even&Odd</h4></li>
-  </ul>
-    </div>
-    <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
-    <img src="images/pic2.png" alt=""  class="img-responsive"/>
-    <hr>
-    <ul>
-    <li><button class="button">$145.99</button></li>
-    <li><h4>Even&Odd</h4></li>
-  </ul>
-    </div>
-    <div class="col-md-4 col-sm-6 col-xs-12 item-prop ">
-    <img src="images/pic1.png" alt=""  class="img-responsive"/>
-    <hr>
-    <ul>
-    <li><button class="button">$145.99</button></li>
-    <li><h4>Even&Odd</h4></li>
-  </ul>
-    </div>
-
-
+      <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
+      <a href="#"><img src="images/pic2.png" alt="" class="img-responsive"/></a>
+      <hr>
+      <ul>
+      <li><button class="button">$145.99</button></li>
+      <li> <a href="#"><h4>Even&Odd</h4></li></a>
+    </ul>
+      </div>
+      <div class="col-md-4 col-sm-6 col-xs-12 item-prop">
+      <a href="#"><img src="images/pic1.png" alt="" class="img-responsive" /></a>
+      <hr>
+      <ul>
+      <li><button class="button">$145.99</button></li>
+      <li> <a href="#"><h4>Even&Odd</h4></li></a>
+      <span class="out bg">Out Of <br>Stock</span>
+    </ul>
+      </div>
 </div>
 </section>
+<!--End Of main items section-->
 
 
-
+<!--Footer-->
 <footer>
-<div class="container">
+  <div class="container">
   <div class="col-md-8">
     <p>Copyright © Fooseshoes 2013.</p>
- <p>Designed by EnzoLiVolti. </p>
+    <p>Designed by EnzoLiVolti. </p>
   </div>
-
   <div class="col-md-4">
     <ul class="footer-right">
       <li> <a href="#">Home /</a></li>
@@ -211,20 +176,16 @@
       <li> <a href="#">Terms and Condition /</a></li>
       <li> <a href="#"> Contact Us</a> </a></li>
     </ul>
+   </div>
   </div>
-
-</div>
 </footer>
 
     <!-- jQuery -->
-
     <script src="js/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/npm.js"></script>
-<script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
 
 </body>
-
 </html>
